# fastapi_tema

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  alembic.ini  app.py  docker-compose-local.yaml  docker_compose_local.yaml  pyproject.toml
.github/workflows/: ci.yml
fastapi_tema/: app.py  main.py  settings.py
fastapi_tema/aplication/: config.py  settings.py
fastapi_tema/db/: alembic.ini  db_session.py  db_settings.py
fastapi_tema/db/migrations/: env.py
fastapi_tema/db/migrations/versions/: 9c14aabdcccc_add_user_entity.py
fastapi_tema/tests/: conftest.py  test_create_user.py  test_status.py
fastapi_tema/tests/test_handlers/: test_delete_handler.py  test_get_handler.py  test_role_management.py  test_update_handler.py
fastapi_tema/user/: user_controller.py  user_entity.py  user_service.py  utils.py
migrations/: env.py
migrations/versions/: 26d2f96c355d_test_running_migrations.py  3237e8997914_test_running_migrations.py  32f1a64d06ea_test_running_migrations.py
static/: index.html  scripts.js  styles.css
tests/: test_status.py
