[tool.poetry]
name = "fastapi-tema"
version = "0.1.0"
description = ""
authors = ["Ilya <perk.1@mail.ru>"]
readme = "README.md"


[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.92.0"
uvicorn = "^0.20.0"
pylint = "^3.2.5"
motor = "^3.5.0"


[tool.poetry.group.test.dependencies]
pytest = "^8.2.2"
httpx = "^0.27.0"
mypy = "^1.10.1"
ruff = "^0.5.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"



