[tool.poetry]
name = "fastapi_tema"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.11"
# Добавьте другие зависимости вашего проекта

[tool.poetry.dev-dependencies]
pytest = "^7.0"
mypy = "^0.9"
ruff = "^0.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"


[tool.ruff]
line-length = 88
exclude = ["migrations", ".git", "venv_3.9/Lib/site-packages", "venv/Lib/site-packages"]
ignore = ["E501", "E203", "E402", "E712"]

[tool.ruff.per-file-ignores]
"venv_3.9/Lib/site-packages/yaml/serializer.py" = ["F405"]
