[tool.poetry]
name = "fastapi_tema"
version = "0.1.0"
description = ""
authors = ["Ilya <perk.1@mail.ru>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9.13"
fastapi = "0.88.0"
uvicorn = "0.20.0"
sqlalchemy = "1.4.45"
pydantic = { version = "*", extras = ["email"] }
envparse = "0.2.0"
psycopg2-binary = "2.9.5"
asyncpg = "0.27.0"
alembic = "1.9.0"
python-jose = "3.3.0"
passlib = "1.7.4"
python-multipart = "0.0.5"
bcrypt = "4.0.1"
greenlet = "2.0.2"
sentry-sdk = { version = "*", extras = ["fastapi"] }
starlette-exporter = "0.15.1"

[tool.poetry.dev-dependencies]
pytest = "7.2.0"
pytest-asyncio = "0.20.3"
httpx = "0.23.3"
pre-commit = "2.21.0"
mypy = "1.10.1"  # Обновите на актуальную версию
ruff = "0.5.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 88
exclude = ["migrations", ".git", "venv_3.9/Lib/site-packages", "venv/Lib/site-packages"]
ignore = ["E501", "E203", "E402", "E712"]

[tool.ruff.per-file-ignores]
"venv_3.9/Lib/site-packages/yaml/serializer.py" = ["F405"]
